--- a/dev/blocks/contact/_contact.sass
+++ b/dev/blocks/contact/_contact.sass
@@ -1,14 +1,16 @@
-@import "feedback"
+@import 'feedback'
 
 .contact
   @media screen and (max-width: 640px)
     flex-direction: column
 
+
 .contact__content
-  @include page-content
+  @include pageContent
   @media screen and (max-width: 640px)
     margin-right: 0
 
+
 .map
   margin-bottom: 30px
-  background: $alt-color
+  background: $altColor
