--- a/dev/blocks/contact/_feedback.sass
+++ b/dev/blocks/contact/_feedback.sass
@@ -3,24 +3,26 @@
   @media screen and (max-width: 480px)
     flex-direction: column
 
+
 .feedback__contacts
   flex: 1
   @media screen and (max-width: 480px)
     margin-bottom: 20px
 
+
 .feedback__text
-  @include default-text
+  @include paragraph
   margin: 0
   padding-right: 30px
 
-.feedback__title
-  @include default-text
-  font-weight: 600
-  color: $head-color
-  margin-bottom: 0
+  span
+    font-weight: 600
 
-.feedback__text span
+.feedback__title
+  @include paragraph
   font-weight: 600
+  color: $headColor
+  margin-bottom: 0
 
 .feedback__form
   flex: 2
