--- a/dev/blocks/recent/_recent.sass
+++ b/dev/blocks/recent/_recent.sass
@@ -3,7 +3,7 @@
   display: table
 
 .h-line__text
-  @include default-header
+  @include heading
   white-space: nowrap
   width: 200px
   padding-right: 20px
@@ -15,4 +15,4 @@
   width: 100%
   display: table-cell
   left: 0
-  background: url("../img/h_line.png") repeat-x left
+  background: url('../img/h_line.png') repeat-x left
