--- a/dev/components/sidebar/_lists.sass
+++ b/dev/components/sidebar/_lists.sass
@@ -3,17 +3,17 @@
   padding-left: 0
 
 .link-list__item
-  & a
-    @include default-text
+  a
+    @include paragraph
     text-decoration: none
 
     &:hover
-      color: $base-color
+      color: $baseColor
 
 .tag-cloud__item
-  & a
+  a
     &:hover
-      color: $base-color
+      color: $baseColor
 
 .link-list_tag
   display: flex
