--- a/dev/components/sidebar/_widget.sass
+++ b/dev/components/sidebar/_widget.sass
@@ -3,13 +3,13 @@
   overflow: hidden
 
 .widget__title
-  @include default-header
+  @include heading
   margin-top: 0
   white-space: nowrap
   font-size: 14px
 
-  & a
-    @include default-header
+  a
+    @include heading
     font-size: 14px
     text-decoration: none
 
@@ -22,6 +22,6 @@
     background: url('../img/s_line.png') repeat-x left
 
 .widget__text
-  & p
-    @include default-text
+  p
+    @include paragraph
     margin: 0
