--- a/dev/components/slider/_btn.sass
+++ b/dev/components/slider/_btn.sass
@@ -16,8 +16,8 @@
   opacity: 0.6
   transition: opacity 200ms
   z-index: 10
-  stroke: $back-color
-  fill: $back-color
+  stroke: $backColor
+  fill: $backColor
 
   &:hover
     opacity: 1
