--- a/dev/mixins/_theme.sass
+++ b/dev/mixins/_theme.sass
@@ -1,16 +1,16 @@
-$base-color: #e8603a
-$alt-color: #f2af9e
-$head-color: #e7663c
-$text-color: #000
-$alt-text-color: #fff
-$back-color: #fff
-$alt-back-color: #000
-$quote-color: #5a5a5a
-$disabled-color: #b9b9b9
-$menu-back-color: #ddd
-$trans-back-color: rgba(232, 96, 58, 0.8)
-$success-color: #489c24
-$alt-success-color: #aad7a7
-$error-color: #d60000
-$alt-error-color: #ff8484
-$back-error-color: #ffacac
+$baseColor: #e8603a
+$altColor: #f2af9e
+$headColor: #e7663c
+$textColor: #000
+$altTextColor: #fff
+$backColor: #fff
+$altBackColor: #000
+$quoteColor: #5a5a5a
+$disabledColor: #b9b9b9
+$menuBackColor: #ddd
+$transBackColor: rgba(232, 96, 58, 0.8)
+$successColor: #489c24
+$altSuccessColor: #aad7a7
+$errorColor: #d60000
+$altErrorColor: #ff8484
+$backErrorColor: #ffacac
