--- a/dev/blocks/blog/_blog.sass
+++ b/dev/blocks/blog/_blog.sass
@@ -1,5 +1,5 @@
 .blog__postlist
-  @include page-content
+  @include pageContent
 
 .blog__post
   position: relative
@@ -11,11 +11,11 @@
   height: 75px
   text-align: center
   line-height: 75px
-  background: $base-color
+  background: $baseColor
 
 .blog__icon
   font-size: 32px
-  color: #ffffff
+  color: $altTextColor
 
 .blog__pic
   img
@@ -28,7 +28,7 @@
   margin-bottom: 30px
 
 .blog__info
-  @include default-text
+  @include paragraph
   flex: 3
   margin: 1px 5px 20px 2px
 
@@ -37,23 +37,25 @@
   flex-direction: column
 
 .blog__info-title
-  @include default-header
+  @include heading
   font-size: 12px
   margin-bottom: 5px
 
 .blog__info-text
-  @include default-text
-  color: $disabled-color
+  @include paragraph
+  color: $disabledColor
   margin-bottom: 15px
+
   a
     text-decoration: none
-    color: $disabled-color
+    color: $disabledColor
 
 .blog__article
   flex: 11
   margin-left: 2px
-  h2.blog__header
-    @include default-header
+
+  .blog__header
+    @include heading
     font-weight: 500
     margin-top: 3px
     margin-bottom: 15px
@@ -61,53 +63,56 @@
 .blog__post-link
   text-decoration: none
 
-.blog__article, .blog__link
-  @include post-content
+.blog__article,
+.blog__link
+  @include postContent
 
-.blog__link a
-  display: block
-  @include default-text
-  color: $disabled-color
-  text-decoration: none
-  margin-top: -12px
-  margin-bottom: 20px
+.blog__link
+  a
+    @include paragraph
+    display: block
+    color: $disabledColor
+    text-decoration: none
+    margin-top: -12px
+    margin-bottom: 20px
 
 .blog__line
-  @include bottom-line
+  @include bottomLine
   margin-bottom: 45px
 
 @media screen and (max-width: 1130px)
   .blog__iconbox
     display: none
 
-@media screen and (max-width: 640px)
-  .blog
-    flex-direction: column
+  @media screen and (max-width: 640px)
+    .blog
+      flex-direction: column
 
-  .blog__postlist
-    margin-right: 0
+    .blog__postlist
+      margin-right: 0
 
-@media screen and (max-width: 520px)
-  .blog__text
-    flex-direction: column
+    @media screen and (max-width: 520px)
+      .blog__text
+        flex-direction: column
 
-  .blog__info-meta
-    flex-direction: row
-    display: inline-block
-    margin-bottom: 10px
+      .blog__info-meta
+        flex-direction: row
+        display: inline-block
+        margin-bottom: 10px
 
-  .blog__info-title
-    display: inline-block
-    @include default-header
-    margin-right: 10px
-    font-size: 12px
+      .blog__info-title
+        @include heading
+        display: inline-block
+        margin-right: 10px
+        font-size: 12px
 
-  .blog__info-text
-    display: inline-block
-    @include default-text
-    color: $disabled-color
-    text-transform: capitalize
-    margin-right: 30px
-    a
-      text-decoration: none
-      color: $disabled-color
+      .blog__info-text
+        @include paragraph
+        display: inline-block
+        color: $disabledColor
+        text-transform: capitalize
+        margin-right: 30px
+
+        a
+          text-decoration: none
+          color: $disabledColor
