--- a/dev/blocks/body/_body.sass
+++ b/dev/blocks/body/_body.sass
@@ -4,7 +4,7 @@ html
 
 body
   margin: 0
-  background: url("../img/bg.png") repeat
+  background: url('../img/bg.png') repeat
   height: 100%
   box-sizing: border-box
 
@@ -14,9 +14,11 @@ body
   height: 0
   overflow: hidden
 
-.media iframe, .media object, .media embed
-  position: absolute
-  top: 0
-  left: 0
-  width: 100%
-  height: 100%
+  iframe,
+  object,
+  embed
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
