--- a/dev/blocks/post-navigation/_post-navigation.sass
+++ b/dev/blocks/post-navigation/_post-navigation.sass
@@ -1,25 +1,27 @@
 .screen-reader-text
   display: none
 
-.post-navigation .nav-links
-  display: flex
-  justify-content: space-between
-  flex-wrap: wrap
+.post-navigation
+  .nav-links
+    display: flex
+    justify-content: space-between
+    flex-wrap: wrap
 
 .nav-previous
   margin-right: 2em
   margin-bottom: 1em
 
-.nav-previous, .nav-next
+.nav-previous,
+.nav-next
   margin-bottom: 20px
 
-.nav-previous a, .nav-next a
-  @include default-header
-  font-size: 14px
-  color: $alt-color
-  margin-bottom: 10px
-  text-decoration: none
+  a
+    @include heading
+    font-size: 14px
+    color: $altColor
+    margin-bottom: 10px
+    text-decoration: none
 
-.nav-previous span, .nav-next span
-  color: $base-color
-  margin-left: 1em
+  span
+    color: $baseColor
+    margin-left: 1em
