--- a/dev/blocks/quote/_quote.sass
+++ b/dev/blocks/quote/_quote.sass
@@ -2,21 +2,21 @@ blockquote
   @include quote
 
 .blockquote
-  background: url("../img/bg-quote.png") repeat
+  background: url('../img/bg-quote.png') repeat
   min-height: 75px
   display: flex
   justify-content: center
   align-items: flex-start
 
-.blockquote p
-  @include default-text
-  font-style: italic
-  font-size: 13px
-  margin: 20px 20px 20px 10px
-  color: $quote-color
+  p
+    @include paragraph
+    font-style: italic
+    font-size: 13px
+    margin: 20px 20px 20px 10px
+    color: $quoteColor
 
-.blockquote i
-  font-size: 28px
-  margin-left: 30px
-  margin-top: 20px
-  color: $base-color
+  i
+    font-size: 28px
+    margin-left: 30px
+    margin-top: 20px
+    color: $baseColor
