--- a/dev/blocks/sidepane/_sidepane.sass
+++ b/dev/blocks/sidepane/_sidepane.sass
@@ -5,7 +5,7 @@
 .sidepane
   position: absolute
   width: 100%
-  background: $alt-color
+  background: $altColor
   z-index: -10
 
 .sidepane_top
@@ -18,7 +18,7 @@
   box-sizing: content-box
   border-left: 10px solid transparent
   border-right: 10px solid transparent
-  background: url("../img/bg.png") repeat
+  background: url('../img/bg.png') repeat
   z-index: -5
 
 @media screen and (max-width: 1000px)
