--- a/dev/components/button/_button.sass
+++ b/dev/components/button/_button.sass
@@ -1,11 +1,11 @@
 .button
-  @include default-header
+  @include heading
   text-decoration: none
   font-size: 12px
   text-align: center
   display: block
-  background: $head-color
-  color: $alt-text-color
+  background: $headColor
+  color: $altTextColor
   padding: 8px 10px 6px
   border: 0
   margin-bottom: 40px
@@ -13,15 +13,7 @@
   outline: none
 
   &:hover
-    color: $alt-color
-
-.button_more
-  position: absolute
-  bottom: 0
-  width: 35px
-
-.button_type_submit
-  width: 75px
+    color: $altColor
 
 @media screen and (max-width: 580px)
   .button_more
