--- a/dev/components/form/_form.sass
+++ b/dev/components/form/_form.sass
@@ -3,16 +3,21 @@
   flex-direction: column
   position: relative
 
+.form__input
+  width: 215px
+  height: 34px
+  margin-bottom: 10px
+
 .form__label
-  @include default-header
+  @include heading
   opacity: 0
   position: relative
   border-radius: 1px
   padding: 10px 8px 6px
   margin-left: 25px
   font-size: 12px
-  background: $base-color
-  color: $alt-text-color
+  background: $baseColor
+  color: $altTextColor
   z-index: 1
 
   &::before
@@ -27,3 +32,6 @@
     padding: 8px
     transform: rotate(45deg)
     z-index: -1
+
+.form__button
+  width: 75px
