--- a/dev/components/message/message.sass
+++ b/dev/components/message/message.sass
@@ -1,5 +1,5 @@
 .message
-  @include default-text
+  @include paragraph
   font-weight: 700
   width: 215px
   margin-bottom: 10px
@@ -11,11 +11,11 @@
 
 
 .message_type_success
-  color: $success-color
-  background: $alt-success-color
-  border: 1px solid $success-color
+  color: $successColor
+  background: $altSuccessColor
+  border: 1px solid $successColor
 
 .message_type_error
-  color: $error-color
-  background: $alt-error-color
-  border: 1px solid $error-color
+  color: $errorColor
+  background: $altErrorColor
+  border: 1px solid $errorColor
