--- a/dev/components/navbar/_navbar.sass
+++ b/dev/components/navbar/_navbar.sass
@@ -18,111 +18,111 @@
   align-items: center
 
 .menu__item
-  @include default-header
+  @include heading
   padding-left: 25px
   list-style: none
 
-  & a
+  a
     font-size: 16px
-    color: $disabled-color
+    color: $disabledColor
     text-decoration: none
     transition: color 200ms
 
     &:hover
-      color: $alt-color
+      color: $altColor
 
 .menu__item_active
-  & a
-    color: $base-color
+  a
+    color: $baseColor
 
-    & span
-      color: $alt-color
+    span
+      color: $altColor
 
     &:hover
-      color: $base-color
+      color: $baseColor
 
 @media screen and (max-width: 680px)
   .menu__item
     padding-left: 20px
 
-@media screen and (max-width: 560px)
-  .menu__list
-    height: 64px
+  @media screen and (max-width: 560px)
+    .menu__list
+      height: 64px
 
-  .menu__item
-    padding-left: 15px
+    .menu__item
+      padding-left: 15px
 
-  .menu__item
-    & a
-      font-size: 15px
+    .menu__item
+      a
+        font-size: 15px
 
-@media screen and (max-width: 500px)
-  .menu__list
-    height: 60px
+    @media screen and (max-width: 500px)
+      .menu__list
+        height: 60px
 
-  .menu__item
-    padding-left: 10px
+      .menu__item
+        padding-left: 10px
 
-  .menu__item
-    & a
-      font-size: 14px
+      .menu__item
+        a
+          font-size: 14px
 
-@media screen and (max-width: 440px)
-  .navbar
-    flex-direction: column
+      @media screen and (max-width: 440px)
+        .navbar
+          flex-direction: column
 
-  .menu__btn
-    display: block
-    position: absolute
-    right: 0
-    top: 10px
-    margin-right: 0.2em
-    font-size: 28px
-    line-height: 40px
-    z-index: 100
-    color: $disabled-color
-    transition: color 500ms
+        .menu__btn
+          display: block
+          position: absolute
+          right: 0
+          top: 10px
+          margin-right: 0.2em
+          font-size: 28px
+          line-height: 40px
+          z-index: 100
+          color: $disabledColor
+          transition: color 500ms
 
-    &:hover
-      color: $alt-color
+          &:hover
+            color: $altColor
 
-  .menu__btn_blink
-    color: $base-color
+        .menu__btn_blink
+          color: $baseColor
 
-    &:hover
-      color: $base-color
+          &:hover
+            color: $baseColor
 
-  .menu__list
-    padding: 0
-    display: flex
-    height: 0
-    overflow: hidden
-    width: 100%
-    top: 55px
-    left: 0
-    flex-direction: column
-    justify-content: space-between
-    background: $back-color
-    transition: height 500ms
-    z-index: 1
+        .menu__list
+          padding: 0
+          display: flex
+          height: 0
+          overflow: hidden
+          width: 100%
+          top: 55px
+          left: 0
+          flex-direction: column
+          justify-content: space-between
+          background: $backColor
+          transition: height 500ms
+          z-index: 1
 
-  .menu__drapdown
-    opacity: 1
-    z-index: 20
-    height: 246px
+        .menu__drapdown
+          opacity: 1
+          z-index: 20
+          height: 246px
 
-  .menu__item
-    width: 100%
-    height: 100%
-    border-top: 1px dotted $menu-back-color
+        .menu__item
+          width: 100%
+          height: 100%
+          border-top: 1px dotted $menuBackColor
 
-    &:last-child
-      border-bottom: 1px dotted $menu-back-color
+          &:last-child
+            border-bottom: 1px dotted $menuBackColor
 
-  .menu__link
-    display: block
-    width: 85%
-    position: relative
-    left: 20px
-    font-size: 17px
-    line-height: 48px
+        .menu__link
+          display: block
+          width: 85%
+          position: relative
+          left: 20px
+          font-size: 17px
+          line-height: 48px
