--- a/dev/components/slider/_thumbs.sass
+++ b/dev/components/slider/_thumbs.sass
@@ -7,7 +7,7 @@
   margin-bottom: 35px
 
 .thumbs__thumb
-  background: $alt-back-color
+  background: $altBackColor
   margin-right: 10px
   height: 120px
 
@@ -31,34 +31,34 @@
   .thumbs__img
     height: 100px
 
-@media screen and (max-width: 780px)
-  .thumbs__thumb
-    height: 80px
+  @media screen and (max-width: 780px)
+    .thumbs__thumb
+      height: 80px
 
-  .thumbs__img
-    height: 80px
+    .thumbs__img
+      height: 80px
 
-@media screen and (max-width: 640px)
-  .thumbs
-    margin-top: 8px
+    @media screen and (max-width: 640px)
+      .thumbs
+        margin-top: 8px
 
-  .thumbs__thumb
-    margin-right: 8px
-    height: 60px
+      .thumbs__thumb
+        margin-right: 8px
+        height: 60px
 
-  .thumbs__img
-    height: 60px
+      .thumbs__img
+        height: 60px
 
-@media screen and (max-width: 560px)
-  .thumbs__thumb
-    height: 50px
+      @media screen and (max-width: 560px)
+        .thumbs__thumb
+          height: 50px
 
-  .thumbs__img
-    height: 50px
+        .thumbs__img
+          height: 50px
 
-@media screen and (max-width: 480px)
-  .thumbs__thumb
-    height: 40px
+        @media screen and (max-width: 480px)
+          .thumbs__thumb
+            height: 40px
 
-  .thumbs__img
-    height: 40px
+          .thumbs__img
+            height: 40px
