--- a/dev/mixins/_blocks.sass
+++ b/dev/mixins/_blocks.sass
@@ -2,51 +2,51 @@
   margin-left: 50px
   padding-left: 20px
   font-style: italic
-  color: $quote-color
-  border-left: 8px solid $base-color
+  color: $quoteColor
+  border-left: 8px solid $baseColor
 
-@mixin page-content
+@mixin pageContent
   margin: 0 50px 45px 0
   flex: 3
 
-@mixin bottom-line
+@mixin bottomLine
   position: relative
   left: 0
   height: 14px
   width: 100%
   background: url('../img/s_line.png') repeat-x left
 
-@mixin post-content
+@mixin postContent
   p
-    @include default-text
+    @include paragraph
     margin-bottom: 20px
 
   h1
-    @include default-header
+    @include heading
     margin-top: 40px
     margin-bottom: 20px
 
   h2
-    @include default-header
+    @include heading
     font-size: 14px
     margin-top: 30px
     margin-bottom: 20px
 
   h3
-    @include default-header
+    @include heading
     font-size: 14px
     font-style: italic
     margin-top: 30px
     margin-bottom: 20px
 
   h4
-    @include default-header
+    @include heading
     font-size: 12px
     margin-top: 20px
     margin-bottom: 15px
 
   h5
-    @include default-header
+    @include heading
     font-size: 12px
     font-style: italic
     margin-top: 20px
@@ -56,7 +56,7 @@
     font-weight: 700
 
   hr
-    @include bottom-line
+    @include bottomLine
     margin-top: 20px
     margin-bottom: 20px
     border: 0
@@ -65,7 +65,7 @@
     font-style: italic
 
   blockquote
-    @include default-text
+    @include paragraph
     @include quote
     margin-bottom: 20px
 
@@ -74,7 +74,7 @@
     margin-bottom: 20px
 
     li
-      @include default-text
+      @include paragraph
       list-style-type: disc
 
   ol
@@ -82,5 +82,5 @@
     margin-bottom: 20px
 
     li
-      @include default-text
+      @include paragraph
       list-style-type: decimal
