--- a/dev/mixins/_text.sass
+++ b/dev/mixins/_text.sass
@@ -1,15 +1,14 @@
-@mixin default-header
+@mixin heading
   font-family: 'Bebas', sans-serif
   font-weight: 500
   word-spacing: 2px
-  color: $head-color
+  color: $headColor
   text-transform: uppercase
   font-size: 18px
   line-height: 1.5
 
-@mixin default-text
+@mixin paragraph
   font-family: 'Open Sans', sans-serif
   font-size: 12px
-  color: $text-color
-  margin: 0
+  color: $textColor
   line-height: 1.5
