--- a/dev/blocks/post/post.pug
+++ b/dev/blocks/post/post.pug
@@ -1,47 +1,46 @@
 .container.container_flex
-    .post
-        .post__content
-            .post__pic
-                img(src="img/jesus.png" alt="Jesus")
-            h2.post__header jesus typography wallpaper giveaway!
-            .post__info
-                .post__info-meta
-                    .post__info-title date
-                    .post__info-text april 12, 2012
-                .post__info-meta
-                    .post__info-title tags
-                    .post__info-text photoshop | design
-                .post__info-meta
-                    .post__info-title comments
-                    .post__info-text 4
-            .post__text
-                p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
-                    | libero maiores molestiae reiciendis! Alias, amet autem commodi consequuntur cupiditate
-                    | eligendi excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem se
-                    | velit! Amet, autem culpa doloribus ex fugit necessitatibus nihil nulla quia, quos reicie
-                    | unde? Distinctio et eveniet exercitationem, expedita quam quo voluptas.
-                p Consectetur adipisicing elit. Asperiores aut digniss
-                    | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum pur
-                    | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedo
-                    | facilis impedit laudantium.
-                p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
-                    | libero maiores molestiae reiciendis! Alias, amet autem commodi consequuntur cupiditate
-                    | eligendi excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem se
-                    | velit! Amet, autem culpa doloribus ex fugit necessitatibus nihil nulla quia, quos reicie
-                    | unde? Distinctio et eveniet exercitationem, expedita quam quo voluptas.
-                p Consectetur adipisicing elit. Asperiores aut digniss
-                    | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum pur
-                    | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedo
-                    | facilis impedit laudantium.
-                p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
-                    | libero maiores molestiae reiciendis! Alias, amet autem commodi consequuntur cupiditate
-                    | eligendi excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem se
-                    | velit! Amet, autem culpa doloribus ex fugit necessitatibus nihil nulla quia, quos reicie
-                    | unde? Distinctio et eveniet exercitationem, expedita quam quo voluptas.
-                p Consectetur adipisicing elit. Asperiores aut digniss
-                    | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum pur
-                    | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedo
-                    | facilis impedit laudantium.
-            .post__line
-            include ../post-navigation/post-navigation
-        include ../../components/sidebar/sidebar
+  .post.main-content
+    .post__pic
+      img(src="img/jesus.png" alt="Jesus")
+    h2.post__header jesus typography wallpaper giveaway!
+    .post__info
+      .post__info-meta
+        .post__info-title date
+        .post__info-text april 12, 2012
+      .post__info-meta
+        .post__info-title tags
+        .post__info-text photoshop | design
+      .post__info-meta
+        .post__info-title comments
+        .post__info-text 4
+    .post__text
+      p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
+        | libero maiores molestiae reiciendis! Alias, amet autem commodi consequuntur cupiditate
+        | eligendi excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem se
+        | velit! Amet, autem culpa doloribus ex fugit necessitatibus nihil nulla quia, quos reicie
+        | unde? Distinctio et eveniet exercitationem, expedita quam quo voluptas.
+      p Consectetur adipisicing elit. Asperiores aut digniss
+        | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum pur
+        | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedo
+        | facilis impedit laudantium.
+      p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
+        | libero maiores molestiae reiciendis! Alias, amet autem commodi consequuntur cupiditate
+        | eligendi excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem se
+        | velit! Amet, autem culpa doloribus ex fugit necessitatibus nihil nulla quia, quos reicie
+        | unde? Distinctio et eveniet exercitationem, expedita quam quo voluptas.
+      p Consectetur adipisicing elit. Asperiores aut digniss
+        | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum pur
+        | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedo
+        | facilis impedit laudantium.
+      p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aut digniss
+        | libero maiores molestiae reiciendis! Alias, amet autem commodi consequuntur cupiditate
+        | eligendi excepturi expedita fuga fugiat fugit illo itaque magnam nemo qui quisquam rem se
+        | velit! Amet, autem culpa doloribus ex fugit necessitatibus nihil nulla quia, quos reicie
+        | unde? Distinctio et eveniet exercitationem, expedita quam quo voluptas.
+      p Consectetur adipisicing elit. Asperiores aut digniss
+        | libero maiores molestiae reiciendis! Adipisci aliquid consequatur doloribus et ipsum pur
+        | sed voluptates. Ab assumenda at corporis ducimus earum eligendi eum exercitationem expedo
+        | facilis impedit laudantium.
+    .post__line
+    include ../post-navigation/post-navigation
+  include ../../components/sidebar/sidebar
