--- a/dev/index/site.sass
+++ b/dev/index/site.sass
@@ -9,6 +9,7 @@
 @import '../components/button/button'
 @import '../components/form/form'
 @import '../components/input/input'
+@import '../components/label/label'
 @import '../components/message/message'
 @import '../components/navbar/navbar'
 @import '../components/sidebar/sidebar'
@@ -19,7 +20,6 @@
 @import '../blocks/blog/blog'
 @import '../blocks/body/body'
 @import '../blocks/contact/contact'
-@import '../blocks/container/container'
 @import '../blocks/footer/footer'
 @import '../blocks/logo/logo'
 @import '../blocks/pagination/pagination'
