--- a/dev/pages/about.pug
+++ b/dev/pages/about.pug
@@ -2,12 +2,12 @@
 - var activeIndex = 1
 doctype html
 html(lang="en")
-    include tmpl/head
-    body
-        .page-wrapper
-            .content
-                include ../components/navbar/navbar
-                include ../blocks/title/title
-                include ../blocks/about/about
-            include ../blocks/footer/footer
-        include tmpl/sources
+  include tmpl/head
+  body
+    .page-wrapper
+      .content-wrapper
+        include ../components/navbar/navbar
+        include ../blocks/title/title
+        include ../blocks/about/about
+      include ../blocks/footer/footer
+    include tmpl/sources
