--- a/dev/pages/contact.pug
+++ b/dev/pages/contact.pug
@@ -2,12 +2,12 @@
 - var activeIndex = 4
 doctype html
 html(lang="en")
-    include tmpl/head
-    body
-        .page-wrapper
-            .content
-                include ../components/navbar/navbar
-                include ../blocks/title/title
-                include ../blocks/contact/contact
-            include ../blocks/footer/footer
-        include tmpl/sources
+  include tmpl/head
+  body
+    .page-wrapper
+      .content-wrapper
+        include ../components/navbar/navbar
+        include ../blocks/title/title
+        include ../blocks/contact/contact
+      include ../blocks/footer/footer
+    include tmpl/sources
