--- a/dev/blocks/title/title.pug
+++ b/dev/blocks/title/title.pug
@@ -1,5 +1,5 @@
 .sidepane-wrapper
     .sidepane.sidepane_top
-    .container.container_flex.sidepane-border
+    .container.sidepane-border
         .title
             h1.title__header=pageTitle
