--- a/dev/pages/about.pug
+++ b/dev/pages/about.pug
@@ -9,5 +9,6 @@ html(lang="en")
         include ../components/navbar/navbar
         include ../blocks/title/title
         include ../blocks/about/about
-      include ../blocks/footer/footer
+      .footer-wrapper
+        include ../blocks/footer/footer
     include tmpl/sources
