--- a/dev/pages/error.pug
+++ b/dev/pages/error.pug
@@ -1,5 +1,5 @@
-- var pageTitle = 'Blog'
-- var activeIndex = 2
+- var pageTitle = 'Error'
+- var activeIndex = 0
 doctype html
 html(lang="en")
   include tmpl/head
@@ -8,7 +8,7 @@ html(lang="en")
       .content-wrapper
         include ../components/navbar/navbar
         include ../blocks/title/title
-        include ../blocks/post/post
+        .container 404
       .footer-wrapper
         include ../blocks/footer/footer
     include tmpl/sources
