--- a/dev/pages/index.pug
+++ b/dev/pages/index.pug
@@ -13,5 +13,6 @@ html(lang="en")
             include ../components/slider/slider
         include ../blocks/article-preview/article-preview
         include ../blocks/recent/recent
-      include ../blocks/footer/footer
+      .footer-wrapper
+        include ../blocks/footer/footer
     include tmpl/sources
