--- a/dev/index/site.sass
+++ b/dev/index/site.sass
@@ -1,10 +1,12 @@
 @import '../fonts/fonts'
 
-@import '../mixins/reset'
-@import '../mixins/theme'
-@import '../mixins/sprite'
 @import '../mixins/blocks'
+@import '../mixins/grid'
+@import '../mixins/reset'
+@import '../mixins/sprite'
 @import '../mixins/text'
+@import '../mixins/theme'
+@import '../mixins/wrappers'
 
 @import '../components/button/button'
 @import '../components/form/form'
@@ -18,7 +20,7 @@
 @import '../blocks/about/about'
 @import '../blocks/article-preview/article-preview'
 @import '../blocks/blog/blog'
-@import '../blocks/body/body'
+@import '../blocks/media/body'
 @import '../blocks/contact/contact'
 @import '../blocks/footer/footer'
 @import '../blocks/logo/logo'
@@ -30,4 +32,3 @@
 @import '../blocks/recent/recent'
 @import '../blocks/sidepane/sidepane'
 @import '../blocks/title/title'
-@import '../blocks/wrappers/wrappers'
