--- a/dev/components/form/form.pug
+++ b/dev/components/form/form.pug
@@ -9,4 +9,4 @@ form.form
         input#input-email.input.form__input(type="email", placeholder="email address")
         label.label(for="email") Your e-mail
     textarea#input-body.form__input.input.input_type_textarea(rows=10, placeholder="message")
-    button.button.form__button(type="submit") Submit
+    button#submit.button.form__button(type="submit") Submit
