--- a/dev/components/form/form.pug
+++ b/dev/components/form/form.pug
@@ -6,7 +6,7 @@ form#feedback-form.form()
     input#input-last-name.input.form__input(type="text", placeholder="last name")
     label.label(for="last_name") Your last name
   div
-    input#input-email.input.form__input(type="text", placeholder="email address")
+    input#input-email.input.form__input(type="email", placeholder="email address")
     label.label(for="email") Your e-mail
   textarea#input-body.form__input.input.input_type_textarea(rows=10, placeholder="message")
   button#submit-btn.button.form__button Submit
