--- a/dev/components/message/message.sass
+++ b/dev/components/message/message.sass
@@ -1,3 +1,7 @@
+@import '../../mixins/theme'
+@import '../../mixins/text'
+
+
 .message
   @include paragraph
   font-weight: 700
@@ -9,6 +13,9 @@
   @media screen and (max-width: 840px)
     width: calc(100% - 160px)
 
+
+.message_none
+  display: none
 
 .message_type_success
   color: $successColor
